2010-02-09  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_profile_dialog.c (nwam_connection_cell_func):
	2010-01-20 commit allows selected_ncp to be NULL, so fix the crash
	in cell_func.
	* common/nwamui_ncu.c:
	* daemon/notify.c (nwam_notification_show_ncu_dup_address):
	* daemon/notify.h:
	* daemon/status_icon.c (ncu_notify_active): Fixed 14427 UI needs
	to alert users for "Duplicate address detected" case when this
	problem occurs

2010-02-09  Lin Ma  <Lin.Ma@Sun.COM>

	* common/nwamui_ncp.c (nwamui_ncp_set_property):
	* common/nwamui_ncu.c (nwamui_ncu_set_property):
	* common/nwamui_wifi_net.c (nwamui_object_real_set_handle):
	Review and change some g_error to g_warning.

2010-02-09  Lin Ma  <Lin.Ma@Sun.COM>

	* data/nwam-network.desktop.in: Use preferences-system-network.png

2010-02-08  Lin Ma  <Lin.Ma@Sun.COM>

	* data/Makefile.am:
	* data/nwam-network.desktop.in: Fixed 14419 System>Administration>
	Network would open the NWAM Network Preferences dialog.

2010-02-05  Lin Ma  <Lin.Ma@Sun.COM>

	* common/nwamui_daemon.c (dispatch_scan_results_from_wlan_array):
	* common/nwamui_wifi_net.c (nwamui_wifi_net_get_status): Fixed
	multiple bssid wlan connection only one bssid has the connected
	flag, so it may be set to disconnect when handle others.
	* nwam_core/lib/i386/libnwam.so.1: Sync with nwamd_133 x86.

2010-02-04  Calum Benson  <calum.benson@sun.com>

	* capplet/main.c:
	* common/libnwamui.h:
	* daemon/status_icon.c: (nwam_menu_create_static_menuitems):

	Tweak new panel menu wording slightly to match online help
	(s/Network Modifier Applications/ Network Modifiers),
	and change command line options from -v/--vpn-pref-dialog to
	-m/--nm-pref-dialog.

2010-02-03  Calum Benson  <calum.benson@sun.com>

	* capplet/main.c:
	* capplet/nwam_conn_stat_panel.c: (vpn_clicked_cb):
	* capplet/nwam_vpn_pref_dialog.c: (vpn_pref_clicked_cb),
	(nwam_vpn_pre_selection_validate):
	* common/nwamui_cond.c: (nwamui_cond_field_to_str):