@@ -1,5 +1,13 @@
 2010-02-09  Lin Ma  <Lin.Ma@Sun.COM>
 
+	* common/nwamui_daemon.c
+	(nwamui_daemon_handle_object_action_event): When add a new wusb,
+	nwamd has a bug that add object happens on a NCP, after add a
+	known wlan, the NCU refresh event happens on another. This is a
+	workaround since ncu maybe NULL. Work around it.
+
+2010-02-09  Lin Ma  <Lin.Ma@Sun.COM>
+
 	* capplet/nwam_profile_dialog.c (nwam_connection_cell_func):
 	2010-01-20 commit allows selected_ncp to be NULL, so fix the crash
 	in cell_func.
